--- a/nav.html
+++ b/nav.html
@@ -26,12 +26,15 @@
             <p class="hero-copy">Sony Interactive Entertainment</p>
             <p class="hero-ps4">PS4</p>
             <div class="hero-prices">
-              <p class="hero-price1">$12.99</p>
-              <p class="hero-price2">$19.99</p>
+                <p class="hero-price1">$12.99</p>
+                <p class="hero-price2">$19.99</p>
             </div>
             <a href="#" class="hero-cta">Add to Cart</a>
-            <img src="https://image.api.playstation.com/grc/images/ratings/hd/esrb/t.png?w=54&thumb=false" class="hero-t">
-            <!-- <p class="hero-t-p">Blood, Violence</p> -->
+            <div class="hero-t">
+                <img src="https://image.api.playstation.com/grc/images/ratings/hd/esrb/t.png?w=54&thumb=false"
+                    class="hero-t-img">
+                <p class="hero-t-p">Blood, Violence</p>
+            </div>
         </section>
 
     </header>
